# REMSOL

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  multilayer_solver.pyi  plot.py  pyproject.toml  remsol.pyi  sm.py  solver_multilayer.py
.benchmarks/Linux-CPython-3.10-64bit/: 0001_baseline.json
.github/workflows/: build.yml  pages.yml  publish_crate.yml  publish_pypi.yml  test.yml
.zed/: rules  settings.json
docs/: _config.yml  _toc.yml  api.md  intro.md
docs/examples/: examples.md  slab.ipynb  sweep.ipynb
src/: enums.rs  layer.rs  lib.rs  main.rs  multilayer.rs  scattering_matrix.rs  transfer_matrix.rs
test/: test_field.py  test_pec.py  test_slab.py
