[package]
name = "remsol"
version = "0.0.1"
edition = "2021"

[dependencies]
find_peaks = "0.1.5"
num-complex = "0.4.6"
itertools = "0.13.0"
iter_num_tools = "0.7.1"
pyo3 = "0.22.0"
cumsum = "1.0.0"

[lib]
name = "remsol"
crate-type = ["cdylib", "rlib"]
# The name of the target.
# path = "src/" # The source file of the target.

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
