[package]
name = "remsol"
version = "0.1.0"
edition = "2021"

[dependencies]
find_peaks = "0.1.5"
num-complex = "0.4.6"
itertools = "0.13.0"
iter_num_tools = "0.7.1"
pyo3 = { version = "0.22.4", features = ["num-complex"] }
cumsum = "1.0.0"
toml = "0.8.19"
serde = { version = "1.0.213", features = ["derive"] }
clap = { version = "4.5.20", features = ["derive"] }

[lib]
name = "remsol"
crate-type = ["cdylib", "rlib"]
# The name of the target.
# path = "src/" # The source file of the target.
