[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "remsol"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
'dev' = ['uv', 'maturin', 'numpy', 'pytest']

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv]
package = true
dev-dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "pytest>=8.3.3",
]
