[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "remsol"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = []

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv]
package = true
dev-dependencies = [
    "jupyter-book>=1.0.3",
    "matplotlib>=3.9.2",
    "nbstripout>=0.7.1",
    "numpy>=2.1.2",
    "pytest>=8.3.3",
    "python-semantic-release>=9.15.1",
]
